--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lucide-react": "^0.426.0",
+    "mongodb": "^6.8.0",
     "next": "14.2.5",
     "node": "^22.6.0",
     "node.js": "^0.0.1-security",
