--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "loader": "^2.1.1",
     "lucide-react": "^0.426.0",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
