--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PAYLOAD_SECRET=mybananaisbig
 MONGODB_URL=mongodb+srv://mahmoudzakaria1011:66558899@cluster0.yvfeg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+RESEND_API_KEY=re_VUigq4RX_LkZ4rCLmwMcVSfFERwKzMqo6
